# BreastCancer-project

./: .gitattributes  CNN for BreastCancer.ipynb  Makefile  README.md  build_dataset.py  config.py  pyproject.toml  test_hello.py
.github/workflows/: test-ci.yml
etc/dbus-1/: session.conf  system.conf
etc/fonts/: fonts.conf
include/: H5pubconf.h  gmp.h  h5_gen.mod  h5a.mod  h5d.mod  h5ds.mod  h5e.mod  h5f.mod  h5fortran_types.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5lt.mod  h5lt_const.mod  h5p.mod  h5r.mod  h5s.mod  h5t.mod  h5tb.mod  h5tb_const.mod  h5z.mod  hdf5.mod  pg_config.h
include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
include/python3.9/: pyconfig.h
