[project]
name = "breastcancer-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kasra Sadatsharifi",email = "41157508+kasrasa@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
pylint = "^3.3.7"
ipython = "^9.2.0"

